--- a/workspace/ERPlab/pom.xml
+++ b/workspace/ERPlab/pom.xml
@@ -100,6 +100,12 @@
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
       </dependency>
+      
+      <dependency>
+		 <groupId>org.apache.tomcat.embed</groupId>
+		 <artifactId>tomcat-embed-jasper</artifactId>
+		 <scope>provided</scope>
+	  </dependency>
    </dependencies>
 
    <build>
