--- a/workspace/ERPlab/src/main/resources/application.properties
+++ b/workspace/ERPlab/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.output.ansi.enabled=always
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:templates/views/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.view-names=thymeleaf/*
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
 
 # spring-jdbc ??? ?? ?? ??? ??? ?? ??
