--- a/workspace2/ERPlab/pom.xml
+++ b/workspace2/ERPlab/pom.xml
@@ -115,6 +115,11 @@
 		 <artifactId>tomcat-embed-jasper</artifactId>
 		 <scope>provided</scope>
 	  </dependency>
+	  <!--mail service-->
+	   <dependency>
+	       <groupId>org.springframework.boot</groupId>
+	       <artifactId>spring-boot-starter-mail</artifactId>
+	   </dependency>
 	  
    </dependencies>
 
